@@ -3,13 +3,12 @@ package school.faang.googlemaps;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Slf4j
 public class LocationSearchRunner {
     public static void main(String[] args) {
-        List<Location> locations = new ArrayList<>(Arrays.asList(
+        List<Location> locations = new ArrayList<>(List.of(
                 new Location("Eiffel Tower", 48.8584, 2.2945),
                 new Location("Statue of Liberty", 40.6892, -74.0445),
                 new Location("Great Wall of China", 40.4319, 116.5704)
